--- a/004_Content/header/css/style.css
+++ b/004_Content/header/css/style.css
@@ -47,6 +47,27 @@
 .header ul li .sub_menu a {
     color: #4087c3;
     width: 100%;
-    border-top: 2px solid #4087c3;
     padding: 10px 0;
+    border-top: 2px solid #4087c3;
+}
+
+/* munu */
+.header .menu {
+    position: absolute;
+    right: 20px; top: 10px;
+    width: 40px; height: 40px;
+}
+.header .menu span {
+    width: 100%; height: 2px;
+    background: #fff;
+    position: absolute;
+}
+.header .menu span:nth-of-type(1){
+    top: 0;
+}
+.header .menu span:nth-of-type(2){
+    top: 9px;
+}
+.header .menu span:nth-of-type(3){
+    top: 19px;
 }
