--- a/004_Content/header/css/style.css
+++ b/004_Content/header/css/style.css
@@ -1,1 +1,139 @@
 @import url("common.css");
+
+/******************************* header *******************************/
+.header {
+    width: 100%;
+    background: #4087c3;
+}
+.header ul {
+    width: 1000px;
+    margin: 0 auto;
+    text-align: center;
+}
+.header ul li {
+    display: inline-block;
+    position: relative;
+}
+.header ul li > a {
+    color: #fff;
+    padding: 10px 10px;
+    text-transform: uppercase;
+}
+.header ul li > a::before {
+    content: "";
+    border: 5px solid transparent;
+    border-bottom: 5px solid #fff;
+    position: absolute;
+    left: calc(50% - 5px); bottom: 0;
+    opacity: 0;
+    z-index: 2;
+}
+.header ul li:hover > a::before {
+    opacity: 1;
+}
+
+/* sub menu */
+.header ul li .sub_menu {
+    position: absolute;
+    left: 0; top: 37px;
+    border: 2px solid #4087c3;
+    display: none;
+}
+.header ul li:hover .sub_menu {
+    display: block;
+}
+.header ul li .sub_menu a {
+    color: #4087c3;
+    width: 100%;
+    padding: 10px 0;
+    border-top: 2px solid #4087c3;
+}
+
+/* munu */
+.header .menu {
+    position: absolute;
+    right: 20px; top: 10px;
+    width: 40px; height: 40px;
+}
+.header .menu span {
+    width: 100%; height: 2px;
+    background: #fff;
+    position: absolute;
+}
+.header .menu span:nth-of-type(1){
+    top: 0;
+}
+.header .menu span:nth-of-type(2){
+    top: 9px;
+}
+.header .menu span:nth-of-type(3){
+    top: 19px;
+}
+
+/******************************* header_2 *******************************/
+.header_2 {
+    background: #eee;
+}
+.header_2 div {
+    width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.header_2 div h1 {
+    font-size: 2em;
+}
+.header_2 div ul li {
+    display: inline-block;
+    margin-left: 30px;
+}
+.header_2 div ul li a {
+    position: relative;
+}
+.header_2 div ul li a::after {
+    content: "";
+    position: absolute;
+    bottom: -3px;
+    left: 50%;
+    width: 0%;
+    height: 2px;
+    background: #555;
+    transition: .5s;
+}
+.header_2 div ul li:hover a::after {
+    Width: 100%;
+    left: 0;
+}
+
+/* sel */
+.sel {
+    display: inline-block;
+    margin: 20px;
+}
+.sel a {
+    padding: 5px 30px 5px 5px;
+}
+.sel > a {
+    width: 100%;
+    border: 1px solid #000;
+    position: relative;
+}
+.sel > a:after {
+    content: "";
+    border: 5px solid transparent;
+    border-top: 5px solid #000;
+    position: absolute;
+    right: 10px; top: calc(50% - 2px);
+}
+.sel ul {
+    display: none;
+}
+.sel:hover ul {
+    display: block;
+}
+.sel ul li {
+    background: #eee;
+    border: 1px solid #666;
+    margin-top: -1px;
+}
