--- a/006_html5_1step/css/common.css
+++ b/006_html5_1step/css/common.css
@@ -1,20 +1,19 @@
 html,body{
     margin:0px;
+    color: #bcbcbc;
 }
 ul,li{
     list-style-type: none;
 }
 a{
-    color:#95979d;
     text-decoration: none;
 }
 span,em,strong,a{display: inline-block;}
 *{
     margin:0;padding:0;
-    font-family: '';
     font-size:16px;
-    color:#95979d;
     box-sizing:border-box;
+    color: #bcbcbc;
     /*
         border 또는 padding 넣어주면 
         width,height값이 변경됨
