--- a/006_html5_1step/css/style.css
+++ b/006_html5_1step/css/style.css
@@ -1,56 +1,145 @@
 @import url('common.css');
 
-header{}
-header nav{
-    width:1200px; margin:0 auto;
-}
-header nav a{}
-
-section{
-    background:#eee;
-}
-section article{
-    width:1200px; margin:0 auto;
-    padding:100px 0;
-}
-section article h2{}
-section article ul{
-    display:flex;
-}
-section article ul li{}
-section article ul li img{
-    width:100%;
+body {
+    width: 1368px;
+    margin: 0 auto;
 }
 
-section article ul li figure{}
-section article ul li figure figcaption{
-    display:none;
+header {
+    width: 100%;
+    height: 100px;
+    background: #ffffff;
+    padding: 38px 98px;
+    display: flex;
+    justify-content: space-between;
+}
+header nav {
+    width: 214px;
+    display: flex;
+    justify-content: space-between;
+}
+header nav a {
+    color: #191919;
+    font-weight: bold;
+    transition: .3s;
+    position: relative;
+}
+header nav a:hover {
+    color: #10c9c3;
+}
+header nav a::after {
+    content: "";
+    width: 20%;
+    height: 2px;
+    background-color: #10c9c3;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    opacity: 0;
+    transition: .5s;
+}
+header nav a:hover::after {
+    width: 100%;
+    left: 0;
+    opacity: 1;
+}
+.visual {
+    width: 100%;
+    height: 313px;
+    background: #f6f6f6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-family: "Myriad Pro";   
+}
+.visual:hover {
+    background: #000;
+    transition: .8s;
+}
+.visual:hover p {
+    line-height: 2em;
+    transition: .8s;
+}
+.visual:hover h1 {
+    transform: scale(1.3);
+    color: #fff;
+}
+.visual h1 {
+    font-size: 38px;
+    color: #171717;
+    font-weight: normal;
+    margin-bottom: 31px;
+    transform: scale(1.5);
+    transition: .5s;
+}
+.visual p {
+    font-size: 18 px;
+    color: #787878;
+    text-align: center;
+    line-height: 1.5em;
 }
 
-section article ul li figure:hover figcaption{
-    /*visibility: visible;*/
-    display:block;
+section {
+    width: 100%;
+    height: 900px;
+}
+section ul {
+    width: 100%;
+    overflow: hidden;
+}
+section ul li {
+    float: left;
+    width: 25%;
+    height: 300px;
+    background: #dddddd;;
+}
+section ul li::after {
+    content: url(../img/eye.png);
+    width: 100%;
+    height: 100%;
+    background: #21bfb9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: .5s;
+}
+section ul li:hover::after {
+    opacity: 1;
 }
 
-
-
-
-
-footer{text-align:center;}
-footer nav{}
-footer nav a{}
-footer p{}
-
-aside{
-    width:200px;
-    position:absolute;
-    left:calc(50% + 600px); top:100px;
-    background:#00f;
-    
+section ul li:nth-of-type(2n+1):nth-of-type(-n+4) {
+    background: #838383;
+}
+section ul li:nth-of-type(2n+6):nth-of-type(-n+8) {
+    background: #838383;
+}
+section ul li:nth-of-type(2n+9):nth-of-type(-n+12) {
+    background: #838383;
 }
 
-
-
-
-
-
+footer {
+    width: 100%;
+    height: 284px;
+    background: #141414;
+    padding: 100px;
+    overflow: hidden;
+    display: flex;
+}
+footer .inc {
+    margin-right: 220px;
+}
+footer .inc h3 {
+    color: #fff;
+    margin-bottom: 28px;
+}
+footer .eme {
+    margin-right: 153px;
+}
+footer ul:nth-of-type(1) {
+    margin-right: 56px;
+}
+footer ul:nth-of-type(2) {
+    margin-right: 136px;
+}
