--- a/006_html5_1step/css/style.css
+++ b/006_html5_1step/css/style.css
@@ -87,26 +87,31 @@ section {
 section ul {
     width: 100%;
     overflow: hidden;
+    position: relative;
 }
 section ul li {
     float: left;
     width: 25%;
     height: 300px;
-    background: #dddddd;;
+    background: #dddddd;
+    position: relative;
 }
-section ul li::after {
-    content: url(../img/eye.png);
+section ul li img {
     width: 100%;
     height: 100%;
-    background: #21bfb9;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: absolute;
+}
+section ul li::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: #21bfb9 url(../img/eye.png) center no-repeat;
+    position: absolute;
     opacity: 0;
     transition: .5s;
 }
 section ul li:hover::after {
-    opacity: 1;
+    opacity: 1;    
 }
 
 section ul li:nth-of-type(2n+1):nth-of-type(-n+4) {
