--- a/006_html5_1step/css/common.css
+++ b/006_html5_1step/css/common.css
@@ -8,7 +8,9 @@ ul,li{
 a{
     text-decoration: none;
 }
-span,em,strong,a{display: inline-block;}
+span,em,strong,a{
+    display: inline-block;
+}
 *{
     margin:0;padding:0;
     font-size:16px;
