--- a/007_all_spot/css/style.css
+++ b/007_all_spot/css/style.css
@@ -59,7 +59,6 @@ header .nav .burger span {
 }
 header .nav .burger:hover span {
     height: 4px;
-
 }
 header .nav .burger:hover span:nth-of-type(1) {
     width: 30px;
@@ -108,6 +107,10 @@ section article {
     background: #fff;
     box-shadow: 1px 1px 100px rgba(0,0,0,.3);
     padding: 40px 60px;
+    transition: 1s;
+}
+section article:hover {
+    transform: translateX(5%) translateY(10%) scale(.9) rotate(15deg);
 }
 section article h2 {
     width: 781px;
