--- a/007_all_spot/css/style.css
+++ b/007_all_spot/css/style.css
@@ -1,6 +1,10 @@
 @import url('common.css');
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Poppins:300,500&display=swap');
 
+.fab {
+    color: #000;
+    font-size: 1.5em;
+}
 
 /*
 font-family: 'Poppins', sans-serif;
