--- a/007_all_spot/css/style.css
+++ b/007_all_spot/css/style.css
@@ -37,16 +37,43 @@ header .nav {
 header .nav h1 a {
     font-weight: bold;
     font-size: 30px;
+    padding: 0 5px;
+    transition: .2s;
 }
-header .nav ul {
+header .nav h1 a:hover {
+    color: #fff;
+    background: #000;
+    border-radius: 100px;
+}
+header .nav .menu {
     width: 387px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-header .nav ul li a {
+header .nav .menu li a {
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
+    transition: .5s;
+}
+header .nav .menu li a:hover {
+    font-size: 16px;
+}
+header .nav .menu li a::after {
+    content: "";
+    width: 0%;
+    height: 2px;
+    background:-webkit-linear-gradient(0deg,#156b84,#5c1233);
+    display: block;
+    border-radius: 50px;
+    transform: translateY(100%);
+    opacity: 0;
+    transition: .5s;
+}
+header .nav .menu li a:hover::after {
+    width: 100%;
+    transform: translateY(0%);
+    opacity: 1;    
 }
 header .nav .burger {
     width: 30px;
