--- a/008_all_site2/css/style.css
+++ b/008_all_site2/css/style.css
@@ -27,16 +27,21 @@ header nav ul{
 header nav ul li{
     font-size: 20px;
     font-weight: bold;
+    position: relative;
 }
 header nav ul li::after{
     content: "";
-    width: 100%;
-    height: 5px;
+    width: 0%; height: 5px;
+    border-radius: 50px;
     background: #000;
     display: block;
-    opacity: 0;
+    position: absolute; left: 50%;
+    opacity: 1;
+    transition: .5s;
 }
 header nav ul li:hover::after{
+    left: 0;
+    width: 100%;
     opacity: 1;
 }
 
@@ -53,16 +58,18 @@ section .visual {
     position: relative;
     margin-bottom: 99px;
 }
-section .visual > img {
+section .visual .img_box {
+    overflow: hidden;
+}
+section .visual .img_box img {
     width: 100%;
     transform: translateX(50%);
-    animation: spot 1s forwards;
+    animation: spot 2s forwards;
+    opacity: 0;
 }
 @keyframes spot {
-    0%{}
-    100%{
-        transform: translateX(0%);
-    }
+    0%{opacity: 0;}
+    100%{opacity: 1; transform: translateX(0%);}
 }
 section .visual p{
     position: absolute;
@@ -78,16 +85,16 @@ section .visual p span{
     text-shadow: 2px 2px 10px #000;
     overflow: hidden;
     padding-top: 110px;
-    transition: padding .5s;
+    animation: text 2s 1s forwards;
 }
-section .visual:hover p span {
-    padding-top: 0;
-}
-section .visual p span:first-of-type {
-    transition: 1s;
+@keyframes text {
+    0%{}
+    100%{
+        padding-top: 0;
+    }
 }
 section .visual p span:last-of-type {
-    transition-delay: padding .5s;
+    animation-delay: 1.5s;
 }
 section .visual aside{
     position: absolute;
@@ -114,8 +121,8 @@ section .content {
 section .content li {
     width: 1140px;
     position: absolute; left: 0; top: 0;
-    display: flex;
     justify-content: space-between;
+    display: flex;
 }
 section .content li article {
     height: 260px;
