애니메이션 수정

--- a/008_all_site2/css/style.css
+++ b/008_all_site2/css/style.css
@@ -122,6 +122,9 @@ section .content li {
     width: 1140px;
     position: absolute; left: 0; top: 0;
     justify-content: space-between;
+    display: none;
+}
+section .content li:first-of-type {
     display: flex;
 }
 section .content li article {
