--- a/008_all_site2/css/style.css
+++ b/008_all_site2/css/style.css
@@ -59,17 +59,20 @@ section .visual {
     margin-bottom: 99px;
 }
 section .visual .img_box {
+    width: 100%;
+    height: 100%;
     overflow: hidden;
 }
 section .visual .img_box img {
     width: 100%;
-    transform: translateX(50%);
-    animation: spot 2s forwards;
-    opacity: 0;
+    height: 100%;
+    animation: spot 3s forwards;  
 }
 @keyframes spot {
-    0%{opacity: 0;}
-    100%{opacity: 1; transform: translateX(0%);}
+    0%{
+        transform: translateX(50%);
+    }
+    100%{}
 }
 section .visual p{
     position: absolute;
