--- a/009_transform&animation/css/transform.css
+++ b/009_transform&animation/css/transform.css
@@ -83,7 +83,7 @@ h1 {
 }
 .ani_02 .box div {
     width: 100%; height: 100%;
-    position: absolute;
+    position: absolute;    
     transform-style: preserve-3d;
 }
 .ani_02 .box div p {
@@ -128,3 +128,123 @@ h1 {
 .ani_02 .box div:nth-of-type(4) p span {background: #00f;}
 .ani_02 .box div:nth-of-type(5) p span {background: #fff;}
 .ani_02 .box div:nth-of-type(6) p span {background: #0ff;}
+
+/*******************************************************************************/
+
+.ani_03 .box_02 {
+    width: 300px; height: 300px;
+    position: relative;
+    transform-style: preserve-3d;
+    perspective: 0;
+    animation: abc 30s linear infinite;
+}
+@keyframes abc {
+    0%{
+        transform: rotateX(0deg) rotateY(0deg);
+    }
+    100%{
+        transform: rotateX(360deg) rotateY(360deg);
+    }
+}
+.ani_03 .box_02 div {
+    width: 100%; height: 100%;
+    position: absolute;    
+    transform-style: preserve-3d;
+}
+.ani_03 .box_02 div p {
+    height: 33%;
+    transition: 5s;
+    font-size: 0;
+}
+.ani_03 .box_02 div p span {
+    width: 33%; height: 100%;
+    background: #ddd;
+    transform: translateZ(0);    
+}
+/* .a {
+    animation: jump 2s linear infinite;
+}
+.b {
+    animation: jump2 2s linear infinite;
+}
+.c {
+    animation: jump2 2s linear infinite;
+}
+.d {
+    animation: jump2 2s linear infinite;
+} */
+@keyframes jump {
+    0%{
+        transform: translateX(0) translateY(0) translateZ(0);
+    }
+    50%{
+        transform: rotateX(999deg) rotateY(999deg) rotateZ(999deg) translateX(999px) translateY(999px) translateZ(999px);
+    }
+    100%{
+        transform: translateX(0) translateY(0) translateZ(0);
+    }
+}
+@keyframes jump2 {
+    0%{
+        transform: translateX(0) translateY(0) translateZ(0);
+    }
+    50%{
+        transform: rotateX(-999deg) rotateY(-999deg) rotateZ(-999deg) translateX(-999px) translateY(-999px) translateZ(-999px);
+    }
+    100%{
+        transform: translateX(0) translateY(0) translateZ(0);
+    }
+}
+@keyframes jump3 {
+    0%{
+        transform: translateX(0) translateY(0) translateZ(0);
+    }
+    50%{
+        transform: rotateX(450deg) rotateY(150deg) rotateZ(450deg) translateX(450px) translateY(450px) translateZ(450px);
+    }
+    100%{
+        transform: translateX(0) translateY(0) translateZ(0);
+    }
+}
+@keyframes jump4 {
+    0%{
+        transform: translateX(0) translateY(0) translateZ(0);
+    }
+    50%{
+        transform: rotateX(-450deg) rotateY(-150deg) rotateZ(-450deg) translateX(-450px) translateY(-450px) translateZ(-450px);
+    }
+    100%{
+        transform: translateX(0) translateY(0) translateZ(0);
+    }
+}
+.ani_03 .box_02 div p span:hover {
+    transform: translateZ(300px);
+}
+.ani_03 .box_02 div:nth-of-type(1) {
+    transform: rotateY(0deg) translateZ(150px);
+}
+.ani_03 .box_02 div:nth-of-type(2) {
+    transform: rotateY(90deg) translateZ(150px);
+}
+.ani_03 .box_02 div:nth-of-type(3) {
+    transform: rotateY(180deg) translateZ(150px);
+}
+.ani_03 .box_02 div:nth-of-type(4) {
+    transform: rotateY(270deg) translateZ(150px);
+}
+.ani_03 .box_02 div:nth-of-type(5) {
+    transform: rotateX(90deg) translateZ(150px);
+}
+.ani_03 .box_02 div:nth-of-type(6) {
+    transform: rotateX(270deg) translateZ(150px);
+}
+.box_02:hover div p{
+    transform: scale(0) rotateX(999deg) translateZ(100px);
+}
+
+.ani_03 .box_02 div:nth-of-type(1) p span {background: #f00;}
+.ani_03 .box_02 div:nth-of-type(2) p span {background: #ff0;}
+.ani_03 .box_02 div:nth-of-type(3) p span {background: #0f0;}
+.ani_03 .box_02 div:nth-of-type(4) p span {background: #00f;}
+.ani_03 .box_02 div:nth-of-type(5) p span {background: #000;}
+.ani_03 .box_02 div:nth-of-type(6) p span {background: #0ff;}
