--- a/1001_Site_Renewal/리뉴얼/html/main/css/common.css
+++ b/1001_Site_Renewal/리뉴얼/html/main/css/common.css
@@ -1,15 +1,19 @@
-html, body {
+html, body, ul, li, p, h1, h2, h3, h4, h5, h6 {
     padding: 0;
     margin: 0;
 }
 a{
     text-decoration-line: none;
+    display: inline-block;
+    color: inherit;
 }
 ul, li {
-    list-style: none;
+    list-style-type: none;
+    /* display: inline-block; */
 }
 img {
-    vertical-align: top;
+    font-size: 0;
+    display: inline-block;
 }
 *{
     box-sizing: border-box;
