--- a/1001_Site_Renewal/리뉴얼/html/main/css/style.css
+++ b/1001_Site_Renewal/리뉴얼/html/main/css/style.css
@@ -1,17 +1,29 @@
-@import url(//fonts.googleapis.com/earlyaccess/nanumgothic.css);
 @import url(common.css);
+@import url(//fonts.googleapis.com/earlyaccess/nanumgothic.css);
+@import url(https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css);
 
-/***** body *****/
+/** font
+
+font-family: 'NanumSquare', sans-serif
+font-family: 'Nanum Gothic', sans-serif;
+
+**/
+
+
+/********** body **********/
 
 html, body {
-    font-family: 'Nanum Gothic', sans-serif;
+    font-family: 'NanumSquare', sans-serif
+    color: #333;
 }
 
-/***** header *****/
+/********** header **********/
 
 header {
-    background: #fff / cover;
-    height: 94px;
+    width: 100%; height: 94px;
+    background: #fff;
+    position: fixed; left: 0; top: 0;
+    z-index: 999;
 }
 header .header_box {
     width: 1410px;
@@ -31,18 +43,6 @@ header .header_box nav ul li a {
     font-size: 18px;
     font-weight: bold;
 }
-header .header_box nav ul li a::after {
-    content: "";
-    width: 100%;
-    height: 2px;
-    background: #333;
-    display: block;
-    margin-top: 3px;
-    opacity: 0;
-}
-header .header_box nav ul li a:hover::after {
-    opacity: 1;
-}
 header .header_box .login {
     width: 261px;
     display: flex;
@@ -61,13 +61,10 @@ header .header_box .login form {
     justify-content: space-between;
 }
 header .header_box .login input[type="text"] {
-    width: 100px;
+    width: 100%;
     border: none;
-    margin-left: 13px;
+    margin-left: 5px;
     outline-style: none;
-}
-header .header_box .login input[type="text"]::placeholder {
-    font-size: 11px;
 }
 header .header_box .login form a {
     width: 25px;
@@ -76,4 +73,132 @@ header .header_box .login form a {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+/*************** content ***************/
+
+.content {
+    position: relative;
+}
+
+/******* visual *******/
+
+.visual {
+    height: 773px;
+    margin: 0 auto;
+    background: url(../img/img_visual.jpg) no-repeat center top / cover;
+    display: flex; justify-content: space-between; align-items: center;
+    padding: 0 65px;
+}
+.visual p {
+    font-size: 60px;
+    font-weight: 800;
+    line-height: 70px;
+    letter-spacing: 0.025em;
+    text-align: center;
+    color: #fff;
+    font-family: 'NanumSquare', sans-serif
+}
+.visual p span {
+    color: #ffd617;
+}
+.visual a {
+    opacity: 0.6;
+}
+
+/******* section *******/
+
+section {
+    position: relative;
+    height: 545px;
+    background: #eee;
+}
+
+/******* button *******/
+
+.button {
+    width: 1239px; height: 203px;
+    position: absolute; left: calc(50% - 619.5px); top: -101.5px;
+}
+.button ul {
+    width: 100%; height: 100%;
+    background: #192346;
+    box-shadow: 0 1px 5px #000;
+    display: flex; justify-content: space-around; align-items: center;
+}
+.button ul li a {
+    width: 137px; height: 137px;
+    display: flex; justify-content: flex-end; align-items: center; flex-direction: column;
+    background: #fff;
+    border-radius: 100%;
+}
+.button ul li a:hover {
+    background: #ffd617;
+}
+.button ul li a p {
+    font-size: 18px;
+    color: #000;
+    font-weight: bold;
+    margin: 8px 0 20px;
+}
+
+/******* post *******/
+
+.post {
+    width: 1239px;
+    margin: 0 auto;
+    padding: 199px 43px 0;
+}
+.post > ul {
+    width: 1144px; height: 235px;
+    display: flex; justify-content: space-between; align-items: center;
+}
+.post > ul > span {
+    width: 1px; height: 100%;
+    background: #bfbfbf;
+    display: block;
+}
+.post > ul > li {
+    width: 515px; height: 100%;
+    display: flex; flex-direction: column; justify-content: space-between;
+}
+.post > ul > li .top {
+    width: 100%;
+    display: flex; justify-content: space-between; align-items: center;
+}
+.post > ul > li .top h2 {
+    font-size: 24px;
+    font-weight: bold;
+}
+.post > ul > li .top a {}
+.post > ul > li .top a img {}
+.post > ul > li span {
+    width: 48px; height: 2px;
+    background: #333;
+    display: block;
+}
+.post > ul > li > ul {}
+.post > ul > li > ul li {
+    width: 100%;
+}
+.post > ul > li > ul li a {
+    width: 100%;
+    display: flex; justify-content: space-between; align-items: center;
+}
+.post > ul > li > ul li a:hover p {
+    opacity: 1;
+}
+.post > ul > li > ul li a p {
+    opacity: .8;
+}
+.post > ul > li > ul li a p:first-of-type {
+    font-size: 16px;
+    line-height: 30px;
+    width: 420px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+.post > ul > li > ul li a p:last-of-type {
+    font-size: 12px;
 }
