--- a/1001_Site_Renewal/리뉴얼/html/main/css/style.css
+++ b/1001_Site_Renewal/리뉴얼/html/main/css/style.css
@@ -170,14 +170,11 @@ section {
     font-size: 24px;
     font-weight: bold;
 }
-.post > ul > li .top a {}
-.post > ul > li .top a img {}
 .post > ul > li span {
     width: 48px; height: 2px;
     background: #333;
     display: block;
 }
-.post > ul > li > ul {}
 .post > ul > li > ul li {
     width: 100%;
 }
@@ -201,4 +198,11 @@ section {
 }
 .post > ul > li > ul li a p:last-of-type {
     font-size: 12px;
+}
+
+/******* photo *******/
+
+.photo {
+    width: 100%; height: 663px;
+    margin: 0 auto;
 }
