--- a/1001_Site_Renewal/리뉴얼/html/main/css/style.css
+++ b/1001_Site_Renewal/리뉴얼/html/main/css/style.css
@@ -13,7 +13,7 @@ font-family: 'Nanum Gothic', sans-serif;
 /********** body **********/
 
 html, body {
-    font-family: 'NanumSquare', sans-serif
+    font-family: 'NanumSquare', sans-serif;
     color: #333;
 }
 
@@ -23,22 +23,35 @@ header {
     width: 100%; height: 94px;
     background: #fff;
     position: fixed; left: 0; top: 0;
-    z-index: 999;
+    z-index: 10;
+    position: relative;
 }
 header .header_box {
-    width: 1410px;
+    width: 1410px; height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
-    padding: 18px;
 }
-header .header_box nav ul {
-    width: 513px;
+header .header_box nav {
+    height: 100%;
+}
+header .header_box nav:hover .header_2depth {
+    display: block;
+}
+header .header_box nav .header_1depth {
+    width: 660px; height: 100%;
     display: flex;
     justify-content: space-between;
 }
-header .header_box nav ul li a {
+header .header_box nav .header_1depth li {
+    width: 20%;
+    display: flex;
+    justify-content: center;
+}
+header .header_box nav .header_1depth li a {
+    width: 100%; height: 100%;
+    display: flex; justify-content: center; align-items: center;    
     color: #333;
     font-size: 18px;
     font-weight: bold;
@@ -50,15 +63,14 @@ header .header_box .login {
     align-items: center;
 }
 header .header_box .login a {
+    display: block;
     font-size: 12px;
     color: #333;
 }
 header .header_box .login form {
-    width: 151px;
-    height: 27px;
+    width: 151px; height: 27px;
     border: 2px solid #192346;
-    display: flex;
-    justify-content: space-between;
+    display: flex; justify-content: space-between;
 }
 header .header_box .login input[type="text"] {
     width: 100%;
@@ -74,6 +86,22 @@ header .header_box .login form a {
     justify-content: center;
     align-items: center;
 }
+
+/********** header_2depth**********/
+
+header .header_2depth {
+    width: 100%; height: 180px;
+    position: absolute; left: 0; top: 100%;
+    background: #061237;
+    opacity: 0.8;
+    display: none;
+}
+header .header_2depth .menu {
+    width: 660px; margin: 0 auto;
+}
+header .header_2depth .menu ul {}
+header .header_2depth .menu ul li {}
+header .header_2depth .menu ul li a {}
 
 /*************** content ***************/
 
@@ -104,6 +132,12 @@ header .header_box .login form a {
 }
 .visual a {
     opacity: 0.6;
+    transform: scale(0.9);
+    transition: .5s;
+}
+.visual a:hover {
+    opacity: 0.8;
+    transform: scale(1);
 }
 
 /******* section *******/
