--- a/1001_Site_Renewal/리뉴얼/html/main/css/style.css
+++ b/1001_Site_Renewal/리뉴얼/html/main/css/style.css
@@ -27,7 +27,7 @@ header {
     position: fixed;
 }
 header .header_box {
-    width: 1410px; height: 100%;
+    width: 1462px; height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -64,7 +64,7 @@ header .header_box .login {
 }
 header .header_box .login a {
     display: block;
-    font-size: 12px;
+    font-size: 14px;
     color: #333;
 }
 header .header_box .login form {
@@ -99,9 +99,6 @@ header .header_2depth {
 header .header_2depth .menu {
     width: 660px; margin: 0 auto;
 }
-header .header_2depth .menu ul {}
-header .header_2depth .menu ul li {}
-header .header_2depth .menu ul li a {}
 
 /*************** content ***************/
 
@@ -257,7 +254,6 @@ section {
 .photo .photo_box .photo_left {
     width: 583px;
 }
-.photo .photo_box .photo_left img {}
 .photo .photo_box .photo_left .photo_bottom{
     width: 100%; height: 234px;
     background: #192346;
@@ -330,11 +326,35 @@ section {
     display: flex; justify-content: space-between;
 }
 .information .inf_box {
+    position: relative;
     width: 340px; height: 299px;
     padding: 43px 0 60px;
     border: 1px solid #ccc;
     display: flex; flex-direction: column; justify-content: space-between; align-items: center;
     text-align: center;
+}
+.information .inf_hover {
+    position: absolute; left: 0; top: 0;
+    width: 100%; height: 100%;
+    background: #192346;
+    display: flex; flex-direction: column; justify-content: center;
+    opacity: 0;
+    transition: .3s
+}
+.information .inf_box:hover .inf_hover {
+    opacity: 1;
+}
+.information .inf_hover p:first-of-type {
+    font-size: 24px;
+    font-weight: bold;
+    color: #fff;
+}
+.information .inf_hover > p:first-of-type::after {
+    content: "";
+    width: 48px; height: 2px;
+    margin: 22px auto 20px;
+    background: #fff;
+    display: block;
 }
 .information .inf_box > p {
     font-size: 24px;
@@ -398,7 +418,6 @@ footer .foo_top .foo_all .foo_left ul li a {
 footer .foo_top .foo_all .foo_left ul li a:hover {
     color: #fff;
 }
-footer .foo_top .foo_all .foo_right {}
 footer .foo_top .foo_all .foo_right a {
     display: flex; justify-content: center; align-items: center;
     font-size: 14px;
@@ -432,4 +451,20 @@ footer .bot_text {
 footer .bot_text p {
     font-size: 14px;
     color: #ccc;
+}
+
+/* aside */
+
+aside {
+    width: 36px; height: 36px;
+    position: fixed; right: 20px; bottom: 20px;
+}
+aside a {
+    width: 100%; height: 100%;
+    background: #000;
+    opacity: .5;
+    display: flex; justify-content: center; align-items: center;    
+}
+aside a:hover {
+    opacity: .8;
 }
