--- a/010_html5_site3(bootstrap)/css/common.css
+++ b/010_html5_site3(bootstrap)/css/common.css
@@ -1,11 +1,11 @@
-html,body, figure {
+html,body, figure, h1, p {
     margin:0px;
 }
 ul,li{
     list-style-type: none;
 }
 a{
-    text-decoration-line: none;
+    text-decoration: none;
 }
 span,em,strong,a{
     display: inline-block;
@@ -18,7 +18,6 @@ img {
     font-size:16px;
     box-sizing:border-box;
     color: #000;
-    font-family: 'Open Sans', sans-serif;
     
     /*
         border 또는 padding 넣어주면 
