--- a/1001_Site_Renewal/리뉴얼/html/main/css/style.css
+++ b/1001_Site_Renewal/리뉴얼/html/main/css/style.css
@@ -1,5 +1,5 @@
 @import url(common.css);
-@import url(//fonts.googleapis.com/earlyaccess/nanumgothic.css);
+@import url(https://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 @import url(https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css);
 
 /** font
@@ -20,18 +20,28 @@ html, body {
 /********** header **********/
 
 header {
-    width: 100%; height: 94px;
-    background: #fff;
+    width: 100%;
     position: fixed; left: 0; top: 0;
-    z-index: 10;
-    position: fixed;
+    background:rgba(25,30,70,.8);
+    z-index: 1;
+}
+header::before {
+    content: "";
+    width: 100%; height:94px;
+    background: #fff;
+    display: block;
+    position:absolute;
 }
 header .header_box {
-    width: 1462px; height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    width: 100%;    
+    display: flex; justify-content: space-between; align-items:baseline;
+    padding: 0 48px 0 94px;
     margin: 0 auto;
+    position: relative;
+    z-index: 2;
+}
+header .header_box > a{
+    transform:translateY(-40%);
 }
 header .header_box nav {
     height: 100%;
@@ -40,21 +50,44 @@ header .header_box nav:hover .header_2depth {
     display: block;
 }
 header .header_box nav .header_1depth {
-    width: 660px; height: 100%;
+    height: 100%;
     display: flex;
-    justify-content: space-between;
 }
-header .header_box nav .header_1depth li {
-    width: 20%;
-    display: flex;
-    justify-content: center;
+header .header_box nav .header_1depth > li {
+    text-align: center;
 }
-header .header_box nav .header_1depth li a {
-    width: 100%; height: 100%;
-    display: flex; justify-content: center; align-items: center;    
+header .header_box nav .header_1depth > li > a {
+    width: 100%;
     color: #333;
     font-size: 18px;
     font-weight: bold;
+    line-height: 94px;
+    padding: 0 50px;
+}
+
+header .header_box nav .header_1depth > li > ul {
+    display: none;
+}
+header .header_box nav:hover .header_1depth > li > ul {
+    display: block;
+}
+.header_1depth > li > ul li a {
+    font-size: 15px;
+    color: #fff;
+    line-height: 20px;
+    margin: 25px 0;
+    padding: 0 20px;
+}
+.header_1depth > li > ul li a::after {
+    content: "";
+    width: 0%; height: 2px;
+    background: #fff;
+    display: block;
+    transition: .5s;
+}
+.header_1depth > li > ul li a:hover::after {
+    width: 100%;
+    opacity: 1;
 }
 header .header_box .login {
     width: 261px;
@@ -87,23 +120,11 @@ header .header_box .login form a {
     align-items: center;
 }
 
-/********** header_2depth**********/
-
-header .header_2depth {
-    width: 100%; height: 180px;
-    position: absolute; left: 0; top: 100%;
-    background: #061237;
-    opacity: 0.8;
-    display: none;
-}
-header .header_2depth .menu {
-    width: 660px; margin: 0 auto;
-}
-
 /*************** content ***************/
 
 .content {
     position: relative;
+    margin-top: 94px;
 }
 
 /******* visual *******/
