--- a/1001_Site_Renewal/리뉴얼/html/sub_02/css/style.css
+++ b/1001_Site_Renewal/리뉴얼/html/sub_02/css/style.css
@@ -61,14 +61,13 @@ header .header_box nav .header_1depth > li > a {
     line-height: 90px;
     padding: 0 50px;
 }
-
 header .header_box nav .header_1depth > li > ul {
     display: none;
 }
 header .header_box nav:hover .header_1depth > li > ul {
     display: block;
 }
-.header_1depth > li > ul li a {
+.header_1depth > li > ul li a {    
     font-size: 15px;
     color: #fff;
     line-height: 20px;
@@ -166,7 +165,7 @@ footer {
     width: 100%; height: 198px;
 }
 footer .foo_top {
-    width: 100%; height: 54px;
+    width: 100%;
     background: #37405f;
     display: flex; align-items: center;
 }
@@ -198,22 +197,43 @@ footer .foo_top .foo_all .foo_left ul li:last-of-type::after {
 footer .foo_top .foo_all .foo_left ul li a {
     color: #ccc;
     font-size: 14px;
+    line-height: 54px;
 }
 footer .foo_top .foo_all .foo_left ul li a:hover {
     color: #fff;
 }
-footer .foo_top .foo_all .foo_right a {
-    display: flex; justify-content: center; align-items: center;
+footer .foo_top .foo_all .foo_right {
     font-size: 14px;
+    position: relative;
 }
-footer .foo_top .foo_all .foo_right a p {
+footer .foo_top .foo_all .foo_right > a {
+    display: flex; justify-content: center; align-items: center;
+}
+footer .foo_top .foo_all .foo_right > a p {
     color: #ccc;
     font-size: 16px;
+    line-height: 54px;
 }
-footer .foo_top .foo_all .foo_right a img {
-    margin-left: 5px;
+footer .foo_top .foo_all .foo_right > a img {
+    margin-left: 7px;
 }
-
+footer .foo_top .foo_all .foo_right div {
+    position: absolute; right: 0; bottom: 54px;
+    border: 1px solid #b5b5b5;
+    display: none;
+}
+footer .foo_top .foo_all .foo_right:hover div 
+footer .foo_top .foo_all .foo_right div a {
+    width: 180px;
+    font-size: 16px;
+    color: #333;
+    opacity: .8;
+    line-height: 40px;
+    padding-left: 10px;
+}
+footer .foo_top .foo_all .foo_right div a:hover {
+    opacity: 1;
+}
 footer .bottom {
     width: 100%; height: 144px;
     background: #333;
