비주얼 화살표 변경

--- a/1001_Site_Renewal/리뉴얼/html/main/css/style.css
+++ b/1001_Site_Renewal/리뉴얼/html/main/css/style.css
@@ -104,6 +104,11 @@ header .header_box .login form a {
 }
 .visual a {
     opacity: 0.6;
+    transition: 0.3s;
+}
+.visual a:hover {
+    opacity: 0.8;
+    transform: scale(1.1);
 }
 
 /******* section *******/
