--- a/1001_Site_Renewal/리뉴얼/html/main/css/style.css
+++ b/1001_Site_Renewal/리뉴얼/html/main/css/style.css
@@ -23,7 +23,7 @@ header {
     width: 100%;
     position: fixed; left: 0; top: 0;
     background:rgba(25,30,70,.8);
-    z-index: 1;
+    z-index: 9999;
 }
 header::before {
     content: "";
@@ -56,6 +56,10 @@ header .header_box nav .header_1depth {
 header .header_box nav .header_1depth > li {
     text-align: center;
 }
+header .header_box nav .header_1depth > li:hover > a {
+    background:rgba(25,30,70,.8);
+    color: #fff;
+}
 header .header_box nav .header_1depth > li > a {
     width: 100%;
     color: #333;
@@ -76,18 +80,19 @@ header .header_box nav:hover .header_1depth > li > ul {
     color: #fff;
     line-height: 20px;
     margin: 25px 0;
-    padding: 0 20px;
+    position: relative;
 }
 .header_1depth > li > ul li a::after {
     content: "";
-    width: 0%; height: 2px;
+    width: 0; height: 2px;
     background: #fff;
     display: block;
     transition: .5s;
+    position: absolute; left: 50%; top: 110%;
 }
 .header_1depth > li > ul li a:hover::after {
+    left: 0;
     width: 100%;
-    opacity: 1;
 }
 header .header_box .login {
     width: 261px;
@@ -125,16 +130,38 @@ header .header_box .login form a {
 .content {
     position: relative;
     margin-top: 94px;
+    margin: 0 auto;
 }
 
 /******* visual *******/
 
 .visual {
-    height: 773px;
+    width: 100%; height: 773px;
     margin: 0 auto;
-    background: url(../img/img_visual.jpg) no-repeat center top / cover;
-    display: flex; justify-content: space-between; align-items: center;
+    display: flex; justify-content: center; align-items: center;
     padding: 0 65px;
+    position: relative;
+    overflow: hidden;
+}
+.visual .img {
+    width: 100%; height: 100%;
+    margin: 0 auto;
+    position: absolute; left: 0; top: 0;
+    display: flex; justify-content: center; align-items: center;
+}
+.visual img {
+    position: absolute; left: 50%; top: 0;
+    transform: translateX(-50%);
+    opacity: 0;
+}
+.visual img:nth-of-type(1) {
+    opacity: 1;
+}
+.visual img:nth-of-type(2) {
+    top: -100px;
+}
+.visual img:nth-of-type(3) {
+    top: -200px;
 }
 .visual p {
     font-size: 60px;
@@ -143,19 +170,33 @@ header .header_box .login form a {
     letter-spacing: 0.025em;
     text-align: center;
     color: #fff;
-    font-family: 'NanumSquare', sans-serif
+    margin: 0 auto;
+    z-index: 4;
 }
 .visual p span {
     color: #ffd617;
 }
-.visual a {
+.visual .arrow {
+    width: 100%;
+    position: absolute; left: 0; top: 50%;
+    transform: translateY(-50%);
+    display: flex; justify-content: space-between;
+    padding: 30px;
+    z-index: 3;
+}
+.visual .arrow a {
     opacity: 0.6;
     transform: scale(0.7);
     transition: .5s;
+    font-size: 70px;
+    color: #fff;
 }
-.visual a:hover {
+.visual .arrow a:hover {
     opacity: 0.8;
     transform: scale(0.8);
+}
+.visual .arrow a i{
+
 }
 
 /******* section *******/
@@ -164,6 +205,7 @@ section {
     position: relative;
     height: 545px;
     background: #eee;
+    z-index: 10;
 }
 
 /******* button *******/
@@ -435,21 +477,44 @@ footer .foo_top .foo_all .foo_left ul li:last-of-type::after {
 footer .foo_top .foo_all .foo_left ul li a {
     color: #ccc;
     font-size: 14px;
+    line-height: 54px;
 }
 footer .foo_top .foo_all .foo_left ul li a:hover {
     color: #fff;
 }
-footer .foo_top .foo_all .foo_right a {
+footer .foo_top .foo_all .foo_right {
+    position: relative;
+}
+footer .foo_top .foo_all .foo_right > a {
     display: flex; justify-content: center; align-items: center;
     font-size: 14px;
+    height: 100%;
 }
-footer .foo_top .foo_all .foo_right a p {
+footer .foo_top .foo_all .foo_right > a p {
     color: #ccc;
     font-size: 16px;
 }
-footer .foo_top .foo_all .foo_right a img {
+footer .foo_top .foo_all .foo_right > a img {
     margin-left: 5px;
 }
+footer .foo_top .foo_all .foo_right > ul {
+    width: 140px;
+    position: absolute; right: 0; bottom: 100%;
+    border: 1px solid #b5b5b5;
+    padding-right: 10px;
+    display: none;    
+}
+footer .foo_top .foo_all .foo_right:hover ul {
+    display: block;
+}
+footer .foo_top .foo_all .foo_right > ul li {
+    text-align: end;
+}
+footer .foo_top .foo_all .foo_right > ul li a {
+    font-size: 16px;
+    line-height: 30px;
+}
+
 
 footer .bottom {
     width: 100%; height: 144px;
@@ -479,6 +544,7 @@ footer .bot_text p {
 aside {
     width: 36px; height: 36px;
     position: fixed; right: 20px; bottom: 20px;
+    z-index: 9999;
 }
 aside a {
     width: 100%; height: 100%;
