--- a/1001_Site_Renewal/리뉴얼/css/index.css
+++ b/1001_Site_Renewal/리뉴얼/css/index.css
@@ -56,7 +56,7 @@ html, body {
     top: -200px;
 }
 .visual p {
-    font-size: 60px;
+    font-size: 3.75rem;
     font-weight: 800;
     line-height: 70px;
     letter-spacing: 0.025em;
@@ -67,6 +67,8 @@ html, body {
 }
 .visual p span {
     color: #ffd617;
+    font-size: 3.75rem;
+    font-weight: bold;
 }
 .visual .arrow {
     width: 100%;
@@ -76,19 +78,16 @@ html, body {
     padding: 30px;
     z-index: 3;
 }
-.visual .arrow a {
+.visual .arrow a i {
     opacity: 0.6;
-    transform: scale(0.7);
+    transform: scale(0.9);
     transition: .5s;
-    font-size: 70px;
+    font-size: 3.75rem;
     color: #fff;
 }
-.visual .arrow a:hover {
+.visual .arrow a i:hover {
     opacity: 0.8;
-    transform: scale(0.8);
-}
-.visual .arrow a i{
-
+    transform: scale(1);
 }
 
 /******* section *******/
@@ -122,7 +121,7 @@ section {
     background: #ffd617;
 }
 .button ul li a p {
-    font-size: 18px;
+    font-size: 1.125rem;
     color: #000;
     font-weight: bold;
     margin: 8px 0 20px;
@@ -153,7 +152,7 @@ section {
     display: flex; justify-content: space-between; align-items: center;
 }
 .post > ul > li .top h2 {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: bold;
 }
 .post > ul > li span {
@@ -175,7 +174,7 @@ section {
     opacity: .8;
 }
 .post > ul > li > ul li a p:first-of-type {
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 30px;
     width: 420px;
     overflow: hidden;
@@ -183,7 +182,7 @@ section {
     text-overflow: ellipsis;
 }
 .post > ul > li > ul li a p:last-of-type {
-    font-size: 12px;
+    font-size: 0.75rem;
 }
 
 /******* photo *******/
@@ -194,7 +193,7 @@ section {
     display: flex; flex-direction: column; justify-content: space-between; align-items: center;
 }
 .photo h2 {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: bold;
 }
 .photo > span {
@@ -219,7 +218,7 @@ section {
     color: #fff;
 }
 .photo .photo_box .photo_left .photo_bottom p:nth-of-type(1) {
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: bold;
 }
 .photo .photo_box .photo_left .photo_bottom span {
@@ -228,7 +227,7 @@ section {
     display: block;
 }
 .photo .photo_box .photo_left .photo_bottom p:nth-of-type(2) {
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 28px;
     text-align: center;
 }
@@ -260,12 +259,14 @@ section {
     text-align: center;
 }
 .photo .photo_box .photo_right .text_box p {
-    font-size: 24px;
+    font-size: 1.5rem;
     color: #fff;
     line-height: 40px;
 }
 .photo .photo_box .photo_right .text_box p span {
     font-weight: bold;
+    font-size: 1.5rem;
+    color: #fff;
 }
 .photo .photo_box .photo_right .text_box > span {
     width: 48px; height: 2px;
@@ -300,7 +301,7 @@ section {
     opacity: 1;
 }
 .information .inf_hover p:first-of-type {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: bold;
     color: #fff;
 }
@@ -312,7 +313,7 @@ section {
     display: block;
 }
 .information .inf_box > p {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: bold;
 }
 .information .inf_box > p::after {
@@ -327,11 +328,11 @@ section {
     display: flex; flex-direction: column; justify-content: space-between;
 }
 .information .inf_box .text_box p {
-    font-size: 18px;
+    font-size: 1.125rem;
     line-height: 25px;
 }
 .information .inf_box .text_box p:last-of-type {
-    font-size: 15px;
+    font-size: 0.9375rem;
     color: #666;
 }
 
