다크나이트 psd 제작

--- a/013_janvascript 예제/c02/css/c02.css
+++ b/013_janvascript 예제/c02/css/c02.css
@@ -15,6 +15,10 @@ body {
     text-align: center;
     min-height: 100%;}
 
+    #content.active .message {
+        color: #f00;
+    }
+
 #content {
     background-color: #fff;
     border: 3px double #31373f;
