--- a/scss/common.css
+++ b/scss/common.css
@@ -45,32 +45,4 @@ button {
   font-weight: normal;
   box-sizing: border-box; }
 
-html, body {
-  margin: 0;
-  background: #fff; }
-
-header {
-  background: #ccc; }
-  header:after {
-    content: "";
-    clear: both;
-    display: inline; }
-  header h1 {
-    font-size: 2em;
-    float: left;
-    border: 1px dashed #000; }
-  header nav {
-    float: right; }
-    header nav a {
-      display: inline-block; }
-
-nav a:nth-of-type(1) {
-  font-size: 2rem; }
-
-nav a:nth-of-type(2) {
-  font-size: 4rem; }
-
-nav a:nth-of-type(3) {
-  font-size: 6rem; }
-
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=common.css.map */
