--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,8 @@
-@import "_common";
+@import "common";
 
 $color : #ccc;
+$size : font-size;
+$dash : solid;
 
 @mixin after($dis) {
     &:after{
@@ -20,8 +22,10 @@ header {
     @include after(inline);
 
     h1 {
-        font-size: 2em;
+        #{$size}: 2em;
+        $dash : dashed;
         float: left;
+        border: 1px #{$dash} #000;
     }
     nav {
         float: right;
@@ -29,5 +33,12 @@ header {
         a {
             display: inline-block;
         }
+    }
+}
+
+
+@for $i from 1 to 4 {
+    nav a:nth-of-type(#{$i}){
+        font-size:$i * 2rem;
     }
 }
